Improve sementic `div > {nodeText}` to `div > p > {nodeText}`
According to: https://stackoverflow.com/a/2226574/2226755

--- a/templates/default/tmpl/container.tmpl
+++ b/templates/default/tmpl/container.tmpl
@@ -30,12 +30,12 @@
             <sup class="variation"><?js= doc.variation ?></sup><?js }
          if (doc.signature && !doc.hideconstructor) { ?><?js= doc.signature ?><?js } ?></h2>
         <?js if (doc.classdesc) { ?>
-            <div class="class-description"><?js= doc.classdesc ?></div>
+            <div class="class-description"><p><?js= doc.classdesc ?></p></div>
         <?js } ?>
     <?js } else if (doc.kind === 'module' && doc.modules) { ?>
         <?js doc.modules.forEach(function(module) { ?>
             <?js if (module.classdesc) { ?>
-                <div class="class-description"><?js= module.classdesc ?></div>
+                <div class="class-description"><p><?js= module.classdesc ?></p></div>
             <?js } ?>
         <?js }) ?>
     <?js } ?>
@@ -45,7 +45,7 @@
     <div class="container-overview">
     <?js if (doc.kind === 'module' && doc.modules) { ?>
         <?js if (doc.description) { ?>
-            <div class="description"><?js= doc.description ?></div>
+            <div class="description"><p><?js= doc.description ?></p></div>
         <?js } ?>
 
         <?js doc.modules.forEach(function(module) { ?>
@@ -55,7 +55,7 @@
         <?js= self.partial('method.tmpl', doc) ?>
     <?js } else { ?>
         <?js if (doc.description) { ?>
-            <div class="description"><?js= doc.description ?></div>
+            <div class="description"><p><?js= doc.description ?></p></div>
         <?js } ?>
 
         <?js= self.partial('details.tmpl', doc) ?>
