--- a/templates/default/tmpl/members.tmpl
+++ b/templates/default/tmpl/members.tmpl
@@ -10,7 +10,7 @@ var self = this;
 
 <?js if (data.description) { ?>
 <div class="description">
-    <?js= data.description ?>
+    <p><?js= data.description ?></p>
 </div>
 <?js } ?>
 
