--- a/templates/default/tmpl/method.tmpl
+++ b/templates/default/tmpl/method.tmpl
@@ -19,7 +19,7 @@ var self = this;
 
 <?js if (data.kind !== 'module' && data.description && !data.hideconstructor) { ?>
 <div class="description">
-    <?js= data.description ?>
+    <p><?js= data.description ?></p>
 </div>
 <?js } ?>
 
