--- a/templates/default/tmpl/returns.tmpl
+++ b/templates/default/tmpl/returns.tmpl
@@ -3,7 +3,7 @@ var data = obj || {};
 if (data.description) {
 ?>
 <div class="param-desc">
-    <?js= description ?>
+    <p><?js= description ?></p>
 </div>
 <?js } ?>
 
