--- a/packages/jsdoc-template-legacy/static/styles/jsdoc-default.css
+++ b/packages/jsdoc-template-legacy/static/styles/jsdoc-default.css
@@ -1,62 +1,5 @@
-@font-face {
-  font-family: 'Open Sans';
-  font-weight: normal;
-  font-style: normal;
-  src: url('../fonts/OpenSans-Regular.woff2') format('woff2'),
-    url('../fonts/OpenSans-Regular.woff') format('woff'),
-    url('../fonts/OpenSans-Regular.ttf') format('truetype'),
-    url('../fonts/OpenSans-Regular.svg#OpenSansRegular') format('svg');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-weight: bold;
-  font-style: normal;
-  src: url('../fonts/OpenSans-Bold.woff2') format('woff2'),
-    url('../fonts/OpenSans-Bold.woff') format('woff'),
-    url('../fonts/OpenSans-Bold.ttf') format('truetype'),
-    url('../fonts/OpenSans-Bold.svg#OpenSansBold') format('svg');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-weight: normal;
-  font-style: italic;
-  src: url('../fonts/OpenSans-Italic.woff2') format('woff2'),
-    url('../fonts/OpenSans-Italic.woff') format('woff'),
-    url('../fonts/OpenSans-Italic.ttf') format('truetype'),
-    url('../fonts/OpenSans-Italic.svg#OpenSansItalic') format('svg');
-}
-
-@font-face {
-  font-family: 'Open Sans';
-  font-weight: bold;
-  font-style: italic;
-  src: url('../fonts/OpenSans-BoldItalic.woff2') format('woff2'),
-    url('../fonts/OpenSans-BoldItalic.woff') format('woff'),
-    url('../fonts/OpenSans-BoldItalic.ttf') format('truetype'),
-    url('../fonts/OpenSans-BoldItalic.svg#OpenSansBoldItalic') format('svg');
-}
-
-@font-face {
-  font-family: 'Open Sans Light';
-  font-weight: normal;
-  font-style: normal;
-  src: url('../fonts/OpenSans-Light.woff2') format('woff2'),
-    url('../fonts/OpenSans-Light.woff') format('woff'),
-    url('../fonts/OpenSans-Light.ttf') format('truetype'),
-    url('../fonts/OpenSans-Light.svg#OpenSansLight') format('svg');
-}
-
-@font-face {
-  font-family: 'Open Sans Light';
-  font-weight: normal;
-  font-style: italic;
-  src: url('../fonts/OpenSans-LightItalic.woff2') format('woff2'),
-    url('../fonts/OpenSans-LightItalic.woff') format('woff'),
-    url('../fonts/OpenSans-LightItalic.ttf') format('truetype'),
-    url('../fonts/OpenSans-LightItalic.svg#OpenSansLightItalic') format('svg');
-}
+@import url('./open-sans.css');
+@import url('./open-sans-italic.css');
 
 html {
   overflow: auto;
@@ -65,7 +8,7 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Open SansVariable', sans-serif;
   line-height: 1.5;
   color: #4d4e53;
   background-color: white;
@@ -184,13 +127,13 @@ h1,
 h2,
 h3,
 h4 {
-  font-weight: 200;
   margin: 0;
 }
 
 h1 {
-  font-family: 'Open Sans Light', sans-serif;
+  font-family: 'Open SansVariable', sans-serif;
   font-size: 48px;
+  font-weight: 300;
   letter-spacing: -2px;
   margin: 12px 24px 20px;
 }
@@ -198,19 +141,22 @@ h1 {
 h2,
 h3.subsection-title {
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: -1px;
   margin-bottom: 12px;
 }
 
 h3 {
   font-size: 24px;
+  font-weight: 500;
   letter-spacing: -0.5px;
   margin-bottom: 12px;
 }
 
-h4 {
+h4,
+h4.name {
   font-size: 18px;
+  font-weight: 500;
   letter-spacing: -0.33px;
   margin-bottom: 12px;
   color: #4d4e53;
@@ -219,13 +165,14 @@ h4 {
 h5,
 .container-overview .subsection-title {
   font-size: 120%;
-  font-weight: bold;
+  font-weight: 500;
   letter-spacing: -0.01em;
   margin: 8px 0 3px 0;
 }
 
 h6 {
   font-size: 100%;
+  font-weight: 500;
   letter-spacing: -0.01em;
   margin: 6px 0 3px 0;
   font-style: italic;
@@ -291,6 +238,10 @@ tr > th:last-child {
   font-family: Consolas, Monaco, 'Andale Mono', monospace;
 }
 
+header .signature {
+  font-weight: 700;
+}
+
 .details {
   margin-top: 14px;
   border-left: 2px solid #ddd;
@@ -344,6 +295,7 @@ tr > th:last-child {
 
 .source code {
   font-size: 100%;
+  font-weight: 300;
   line-height: 18px;
   display: block;
   padding: 4px 12px;
