--- a/packages/jsdoc-template-legacy/tmpl/properties.tmpl
+++ b/packages/jsdoc-template-legacy/tmpl/properties.tmpl
@@ -49,7 +49,7 @@
             props.hasName = true;
         }
 
-        if (typeof prop.defaultvalue !== 'undefined' && !data.isEnum) {
+        if (typeof prop.defaultvalue !== 'undefined' && !data.kind === 'enum') {
             props.hasDefault = true;
         }
     });
